# parallel_sorting_by_regular_sampling

./: .clang-format  .gitignore  CMakeLists.txt  README.md  psrs.cpp  psrs.sln  psrs.vcxproj  psrs.vcxproj.filters
docs/: refs.bib  report.tex
include/: psrs.h  psrs.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp  psrs.cpp
test/: plot.py  run_tests.sh  test.sh
